# Odin-Daemon

./: .dockerignore  .editorconfig  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE.md  Makefile  README.md  daemonReader.cpp  daemonTest.cpp  daemonWriter.cpp  devstack.sh  entrypoint.sh  install.sh  main.cpp  makefile
lib/calculations/: CMakeLists.txt  abs.cpp  abs.h  add.cpp  add.h  calc.h  cos.cpp  cos.h  div.cpp  div.h  dot.cpp  dot.h  mul.cpp  mul.h  mult.cpp  mult.h  sin.cpp  sin.h  sqrt.cpp  sqrt.h  sub.cpp  sub.h  transpose.cpp  transpose.h
lib/errors/: calculations_error.h  error.h  variable_error.h  varlist_error.h
lib/helper/: CMakeLists.txt  config.cpp  config.h  daemonize.cpp
lib/varList/: CMakeLists.txt  varlist.cpp  varlist.h
lib/variables/: CMakeLists.txt  variable.cpp  variable.h
tests/: CMakeLists.txt  main.cpp  variableCreation.cpp  variableTests.cpp  varlistTest.cpp
